Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122045

[MediaPlayerExample] The timeline is not reset when the loop mode for single file is turned on

    XMLWordPrintable

Details

    • macOS
    • a751189b5 (dev), e27cbe4ff (6.7), 9f8d87f08 (6.6), e62b2f17b (dev), 1f2733b03 (6.7), 4c588d992 (6.6), 30904ca32 (tqtc/lts-6.5), d89050dd7 (tqtc/lts-6.5)

    Description

      MacOS 14.3

      Qt Creator 12.0.1

      Qt 6.7.0-beta2

      Steps to reproduce:

      1. Open and run a new Media Player Example.
      2. Open any video or audio file.
      3. Turn on the loop mode for single file (see attached video)
      4. Play the file and observe what happens when it ends.

      Expected: The file is played from the beginning and the timeline is showing its progress.

      Actual: The file is played, but the timeline looks like the file is finished. The only workaround is to relaunch the app. 

      Reproducibility:  100% **
       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              lars.sutterud Lars Sutterud
              lkos Łukasz Kosiorowski
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: