QFFmpeg: Fix wrong position returned during looped playback

When playing a video in loop using the ffmpeg backend,
PLaybackEngine::currentPosition calculated and returned wrong position
after the video had looped back to the start position.

Fixes: QTBUG-122045
Change-Id: I464a2d51348c088c26691a0b6f89d036bf90a47a
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit a751189b5250d3df32a2b2b328f77f6cce1ca7c9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e27cbe4ffd05c3d0d9c73a229c757481bd16d718)
(cherry picked from commit 9f8d87f08b3a85229ef57394dbffdb8eb76528b4)